# Jobskills

./: .gitignore  API requirements.txt  ApiHandler.php  ApiHandler1.php  ApiHandlerDiscord.php  Caddyfile  Dockerfile  README.md  Use case.txt  Workflow  app.py  docker-compose.tunnel.yml  docker-compose.yml  document_webhook  flake.nix  index.php  jobsearch.php  letter.php  overlay.nix  pyproject.toml  requirements.txt  results.php  run.py  testwebhook.php  treefmt.nix
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build-container.yml  ci.yml  deploy-main.yml
Help/: help.txt
PHP/: jobsearch.php  match.php
api_test/: Main.py  README.md  gpt.py  job_advert.txt  requirements.txt  skills_matrix.txt
configs/: Caddyfile  ngrok_discord_tunnel.yml  ngrok_portainer_tunnel.yml
discord/: crypto.py  interaction.py
docs/: DISCORD_INTEGRATION.md
jobskills/: __init__.py  config.py  dynaconf_validators.toml  flask.py  jobqueue.py  load.py  scrape.py  settings.toml  settings.yml
jobskills/discord/: __init__.py  flask.py
jobskills/discord/commands/: __init__.py  help.py  modal.py  offer.py  ping.py  scrape.py
jobskills/discord/jobs/: worker.py
jobskills/fileparser/: fileparser.py  worker.py
jobskills/fileparser/filetypes/: docx.py  pdf.py  txt.py
jobskills/gpt/: gpt.py
jobskills/scraper/: domains.json  middlewares.py  pipelines.py  settings.py  worker.py
jobskills/scraper/spiders/: __init__.py  generic.py  indeed.py  readability.py
local/: .env.example  .gitignore  ngrok.yml.example
scraper/: interface.py
scraper/scraper/: settings.py
scraper/scraper/spiders/: __init__.py  indeed.py  readability.py
src/jobskills/: __init__.py  config.py  flask.py  jobqueue.py  settings.yml
src/jobskills/discord/: __init__.py  flask.py  jobqueue.py
src/jobskills/discord/commands/: __init__.py  help.py  modal.py  offer.py  ping.py  scrape.py
src/jobskills/discord/jobs/: worker.py
src/jobskills/fileparser/: fileparser.py  worker.py
src/jobskills/fileparser/filetypes/: docx.py  pdf.py
src/jobskills/gpt/: example.env  gpt.py  worker.py
src/jobskills/scraper/: blacklists.json  domains.json  worker.py
src/jobskills/scraper/spiders/: indeed.py
tests/: test_dynaconf.py  test_flask.py
tests/gpt/: test_gpt.py  test_worker.py
