[tool.poetry]
name = "jobskills"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# fix for lower versions as libraries like Quart import tomli instead of tomllib
tomli = { version = "^2.0.1", python = "<3.11" }
# Flask = {extras = ["async"], version = "^2.3.3"}
Flask-Discord-Interactions = "^2.1.2"
python-dotenv = "^1.0.0"
openai = "^1.0.0"
scrapy = "^2.10.1"
beautifulsoup4 = "^4.12.2"
readability-lxml = "^0.8.1"
crochet = "^2.1.1"
gunicorn = "^21.2.0"
uvicorn = "^0.24.0"
arq = "^0.25.0"
quart = "^0.19"
dynaconf = "^3.2.3"
werkzeug = "^3"
quart-flask-patch = "^0.2.0"
aiohttp = "^3.8.6"

[tool.poetry.scripts]
app = "jobskills:main"
dump_commands = "jobskills.discord.commands:dump"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
pytest = "^7.4.2"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
